tiket_saya.html

--- a/tiket_saya.html
+++ b/tiket_saya.html
@@ -99,15 +99,15 @@
                 poster_mini: 'images/Inside_Out_2_Poster_Indonesian.webp'
             },
             'deadpool_wolverine': {
-                title: 'Deadpool & Wolverine', genre: 'Aksi, Komedi, Fiksi Ilmiah', duration: 'Perkiraan', imdb: '8.5',
+                title: 'Deadpool & Wolverine', genre: 'Aksi, Komedi, Fiksi Ilmiah', duration: '2 jam 8 menit', imdb: '8.5',
                 poster_mini: 'images/Deadpool_Wolverine_p.jpg'
             },
             'a_quiet_place_day_one': {
-                title: 'A Quiet Place: Day One', genre: 'Horor, Thriller, Fiksi Ilmiah', duration: 'Perkiraan', imdb: '7.8',
+                title: 'A Quiet Place: Day One', genre: 'Horor, Thriller, Fiksi Ilmiah', duration: '1 jam 39 menit', imdb: '7.8',
                 poster_mini: 'images/A_Quiet_Place.webp'
             },
             'despicable_me_4': {
-                title: 'Despicable Me 4', genre: 'Animasi, Komedi, Keluarga', duration: 'Perkiraan', imdb: '7.5',
+                title: 'Despicable Me 4', genre: 'Animasi, Komedi, Keluarga', duration: '1 jam 35 menit', imdb: '7.5',
                 poster_mini: 'images/Despicable_Me_4.webp'
             },
             'furiosa_mad_max_saga': {
